[package]
name = "tokio-sqlite"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Asynchronous SQLite client"
repository = "https://github.com/udovin/tokio-sqlite"
keywords = ["async", "sqlite", "sql", "tokio"]
categories = ["database"]

[dependencies]
rusqlite = "0.30.0"
tokio = { version = "1.35.1", features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros"] }
