[package]
name = "tokio-sqlite"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Asynchronous SQLite client"
repository = "https://github.com/udovin/tokio-sqlite"
keywords = ["async", "sqlite", "sql", "tokio"]
categories = ["database"]

[dependencies]
rusqlite = "0.37"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
bundled = ["rusqlite/bundled"]
bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
sqlcipher = ["rusqlite/sqlcipher"]
rt-multi-thread = ["tokio/rt-multi-thread"]
